<resources>
    <string name="app_name">Spite</string>
    <string name="weekly_progress">Weekly Progress:</string>
    <string name="start_workout">Start Workout</string>
    <string name="pause">Pause</string>
    <string name="finish">Finish</string>
    <string name="kyle_s_weekly_progress">Kyle\'s Weekly Progress</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>

    <string name="workout_goal">Workout Goal: </string>
    <string name="home_button_text">Return to Home</string>
    <string name="register">Register</string>
    <string name="confirm_email">Confirm email</string>
    <string name="new_email">New Email</string>
    <string name="current_antag_name">Antagonist </string>
    <string name="rename_antagonist">Rename Antagonist:</string>
    <string name="rename">Rename</string>
    <string name="update">Update</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_new_password">Confirm New Password</string>
    <string name="change_password">Change Password</string>
    <string name="change_email">Change Email</string>
    <string name="logout">Logout</string>
    <string name="settings_title">Settings: (fragment?)</string>
    <string name="view_progress">View Progress</string>
    <string name="check_kyle_prog_button">Check On Kyle</string>
    <string name="workout_in_progress">Workout in Progress</string>
    <string name="set_new_goal">Set New Goal:</string>

    <string name="set_workout_time">Set Workout Time</string>
    <string name="cancel">Cancel</string>
    <string name="profile">Profile</string>
    <string name="settings">Settings</string>
    <string name="home">Home</string>
    <string name="progress">Progress</string>
    <string name="kyle">Kyle</string>
    <string name="Resume">Resume</string>
    <string name="Pause">Pause</string>
    <string name="logged_time">Logged Time:</string>
    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
    <string name="notification_settings">Notification Settings</string>
    <string name="turn_on_daily_reminder">Turn On Daily reminder</string>
    <string name="Go_back">Go Back to Settings</string>
    <string name="turn_on_app_notifications">Turn On App Notifications</string>

</resources>