<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#1F1F21"
    tools:context=".Settings">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/setting"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:textAlignment="viewStart"
            android:textSize="20dp"
            android:text="@string/settings_title" />

        <Button
            android:id="@+id/chngEmailBtn"
            android:layout_width="match_parent"
            android:layout_height="58dp"
            android:layout_weight="0"
            android:background="@color/background"
            android:text="@string/change_email"
            android:textAlignment="viewStart"
            android:textSize="15dp" />

        <Button
            android:id="@+id/chngePasswordBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:background="@color/background"
            android:text="@string/change_password"
            android:textAlignment="viewStart"
            android:textSize="15dp" />

        <Button
            android:id="@+id/kyleSettingsBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:textAlignment="viewStart"
            android:background="@color/background"
            android:textSize="15dp"
            android:text="@string/current_antag_name" />

        <Button
            android:id="@+id/notiSet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:textAlignment="viewStart"
            android:background="@color/background"
            android:textSize="15dp"
            android:text="@string/notification_settings" />

        <Button
            android:id="@+id/logoutBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:textAlignment="viewStart"
            android:background="@color/background"
            android:textSize="15dp"
            android:text="@string/logout" />

        <Button
            android:id="@+id/settingToMainBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:textAlignment="viewStart"
            android:background="@color/background"
            android:textSize="15dp"
            android:text="@string/home_button_text" />


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>