<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#1F1F21"
    tools:context=".ChangeEmail">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="16dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <EditText
            android:id="@+id/currentEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/enter_your_email"
            android:textColor="@color/colorAccent"
            android:textColorHint="@color/grey"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/newEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:ems="10"
            android:textColor="@color/colorAccent"
            android:hint="@string/new_email"
            android:textColorHint="@color/grey"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/confirmNewEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:autofillHints="@string/confirm_email"
            android:textColor="@color/colorAccent"
            android:hint="@string/confirm_email"
            android:textColorHint="@color/grey"
            android:inputType="textEmailAddress" />


        <Button
            android:id="@+id/changeEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/background"
            android:text="@string/change_email" />

        <Button
            android:id="@+id/chngEMtoMainBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/background"
            android:text="@string/home_button_text" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>